fix: npm install with npm 7
npm install was failing with npm 7 unless using the --legacy-peer-deps
flag. Remove dependency to old version of eslint-config-vaadin
and stylelint-config-vaadin while adapting the configs to try to keep
the rules mostly the same for now. We might consider using the latest
version of eslint-config-vaadin and stylelint-config-vaadin again when
we migrate away from bower and HTML Imports and maybe migrate
this repo to use TypeScript.

Fixes #541.

--- a/demo/element-demo.html
+++ b/demo/element-demo.html
@@ -1,4 +1,5 @@
 <script>
+  /* eslint-disable no-global-assign */
   /* @polymerMixin */
   ElementDemo = superClass => {
     return class extends superClass {
