--- a/test/router/router.spec.html
+++ b/test/router/router.spec.html
@@ -85,7 +85,7 @@
             link.click();
             await router.ready.catch(onError);
 
-            expect(onError).to.have.been.called.once;
+            expect(onError).to.have.been.calledOnce;
 
             const error = onError.args[0][0];
             expect(error).to.be.an('error');
@@ -99,7 +99,7 @@
             link.click();
             await router.ready.catch(onError);
 
-            expect(onError).to.have.been.called.once;
+            expect(onError).to.have.been.calledOnce;
 
             const error = onError.args[0][0];
             expect(error).to.be.an('error');
@@ -236,7 +236,7 @@
               router.setOutlet(invalidOutlet);
               await ready;
               expect(fulfilled).to.not.have.been.called;
-              expect(rejected).to.have.been.called.once;
+              expect(rejected).to.have.been.calledOnce;
               expect(rejected.args[0][0]).to.be.instanceof(TypeError);
               router.unsubscribe();
             }));
@@ -292,7 +292,7 @@
             const ready = router.render('/').then(fulfilled).catch(rejected);
             await ready;
             expect(fulfilled).to.not.have.been.called;
-            expect(rejected).to.have.been.called.once;
+            expect(rejected).to.have.been.calledOnce;
             expect(rejected.args[0][0]).to.be.instanceof(DOMException);
           });
 
@@ -391,7 +391,7 @@
             await router.render('/a').catch(onError);
 
             expect(outlet.children).to.have.lengthOf(0);
-            expect(onError).to.have.been.called.once;
+            expect(onError).to.have.been.calledOnce;
           });
 
           it('should render a component for the new route when redirecting', async() => {
@@ -917,7 +917,7 @@
             window.dispatchEvent(new CustomEvent('vaadin-router-go', {detail: {pathname: '/admin'}}));
             await router.ready;
             window.removeEventListener('popstate', onpopstate);
-            expect(onpopstate).to.have.been.called.once;
+            expect(onpopstate).to.have.been.calledOnce;
           });
 
           it('should not trigger a popstate event after navigation if the pathname has not changed', async() => {
@@ -1015,7 +1015,7 @@
               window.addEventListener('vaadin-router-go', spy);
               Vaadin.Router.go('/');
               window.removeEventListener('vaadin-router-go', spy);
-              expect(spy).to.have.been.called.once;
+              expect(spy).to.have.been.calledOnce;
               expect(spy.args[0][0]).to.have.property('type', 'vaadin-router-go');
             });
 
@@ -1025,7 +1025,7 @@
               // use a valid route
               Vaadin.Router.go('/admin');
               window.removeEventListener('vaadin-router-go', spy);
-              expect(spy).to.have.been.called.once;
+              expect(spy).to.have.been.calledOnce;
               expect(spy.args[0][0]).to.have.deep.property('detail.pathname', '/admin');
             });
 
@@ -1335,7 +1335,7 @@
 
             await router.render('/');
 
-            expect(action).to.have.been.called.once;
+            expect(action).to.have.been.calledOnce;
             expect(action.args[0].length).to.equal(2);
 
             let contextParam = action.args[0][0];
@@ -2019,7 +2019,7 @@
 
             await router.render('/users/2');
             expect(outlet.children[0].tagName).to.match(/x-user-profile/i);
-            expect(children).to.have.been.called.once;
+            expect(children).to.have.been.calledOnce;
           });
 
           it('should be called every time when resolver needs the route children list', async() => {
@@ -2093,7 +2093,7 @@
 
             await router.render('/users/1').catch(() => {});
 
-            expect(children).to.have.been.called.once;
+            expect(children).to.have.been.calledOnce;
             expect(children.args[0].length).to.equal(1);
 
             const context = children.args[0][0];
