refactor: continue improving new demo app

--- a/__demo/stories/animated-transitions/d2/iframe.html
+++ b/__demo/stories/animated-transitions/d2/iframe.html
@@ -1,5 +1,8 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
   <body>
     <!-- tag::snippet[] -->
     <div id="outlet"></div>
