--- a/__demo/stories/code-splitting/d3/iframe.html
+++ b/__demo/stories/code-splitting/d3/iframe.html
@@ -3,7 +3,7 @@
   <body>
     <!-- tag::snippet[] -->
     <a href="/">Home</a>
-    <a href="/user/guest">User Profile</a>
+    <a href="/users/guest">User Profile</a>
     <div id="outlet"></div>
     <!-- end::snippet[] -->
     <script type="module" src="../../../common.script.ts"></script>
