refactor: implement multipage

--- a/__demo/animated-transitions/d1/iframe.html
+++ b/__demo/animated-transitions/d1/iframe.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <title>Animated Transitions</title>
     <link rel="stylesheet" href="styles.css" />
+    <script async type="module" src="script.ts"></script>
   </head>
   <body>
     <!-- tag::snippet[] -->
@@ -10,7 +12,5 @@
     <a href="/users">Users</a>
     <div id="outlet"></div>
     <!-- end::snippet[] -->
-    <script type="module" src="../../../common.script.ts"></script>
-    <script type="module" src="script.ts"></script>
   </body>
 </html>
