--- a/__demo/code-splitting/d2/iframe.html
+++ b/__demo/code-splitting/d2/iframe.html
@@ -1,12 +1,14 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <title>Code Splitting</title>
+    <script async type="module" src="./script.ts"></script>
+  </head>
   <body>
     <!-- tag::snippet[] -->
     <a href="/">Home</a>
     <a href="/user/guest">User Profile</a>
     <div id="outlet"></div>
     <!-- end::snippet[] -->
-    <script type="module" src="../../../common.script.ts"></script>
-    <script type="module" src="script.ts"></script>
   </body>
 </html>
