--- a/__demo/animated-transitions/d2/iframe.html
+++ b/__demo/animated-transitions/d2/iframe.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <title>Animated Transitions</title>
     <link rel="stylesheet" href="styles.css" />
+    <script async type="module" src="script.ts"></script>
   </head>
   <body>
     <!-- tag::snippet[] -->
     <div id="outlet"></div>
     <!-- end::snippet[] -->
-    <script type="module" src="../../../common.script.ts"></script>
-    <script type="module" src="script.ts"></script>
   </body>
 </html>
