--- a/__demo/index.html
+++ b/__demo/index.html
@@ -1,12 +1,8 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Animated Transitions</title>
-    <script async type="module" src="./index.ts"></script>
+    <script>
+      window.location.replace('/animated-transitions/');
+    </script>
   </head>
-  <body>
-    <vaadin-demo-layout app-title="Animated Transitions">
-      <vaadin-demo-animated-transitions></vaadin-demo-animated-transitions>
-    </vaadin-demo-layout>
-  </body>
 </html>
