--- a/__demo/index.html
+++ b/__demo/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <script>
-      window.location.replace('/animated-transitions/');
+      window.location.replace('/getting-started/');
     </script>
   </head>
 </html>
