--- a/__demo/code-splitting/d1/iframe.html
+++ b/__demo/code-splitting/d1/iframe.html
@@ -7,9 +7,7 @@
   <body>
     <!-- tag::snippet[] -->
     <a href="/">Home</a>
-    <a href="/users">All Users</a>
-    <a href="/users/kim">Kim</a>
-    <a href="/about">About</a>
+    <a href="/user/guest">User Profile</a>
     <div id="outlet"></div>
     <!-- end::snippet[] -->
   </body>
