docs: add lifecycle-callback page

--- a/__demo/lifecycle-callback/index.html
+++ b/__demo/lifecycle-callback/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Animated Transitions</title>
+    <title>Lifecycle Callback</title>
     <script async type="module" src="../helpers/common.ts"></script>
     <script async type="module" src="./index.ts"></script>
   </head>
   <body>
-    <vaadin-demo-layout app-title="Animated Transitions">
-      <vaadin-demo-animated-transitions></vaadin-demo-animated-transitions>
+    <vaadin-demo-layout app-title="Lifecycle Callback">
+      <vaadin-demo-lifecycle-callback></vaadin-demo-animated-transitions>
     </vaadin-demo-layout>
   </body>
 </html>
