docs: add navigation trigger demo

--- a/__demo/lifecycle-callback/d6/iframe.html
+++ b/__demo/lifecycle-callback/d6/iframe.html
@@ -1,16 +1,15 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Code Splitting</title>
+    <title>Lifecycle Callback</title>
     <script async type="module" src="script.ts"></script>
   </head>
   <body>
     <!-- tag::snippet[] -->
-    <a href="/">Home</a>
     <a href="/users">All Users</a>
     <a href="/users/kim">Kim</a>
     <a href="/about">About</a>
-    <p id="breadcrumbs"></p>
+    <x-breadcrumbs></x-breadcrumbs>
     <div id="outlet"></div>
     <!-- end::snippet[] -->
   </body>
