--- a/__demo/navigation-trigger/d3/iframe.html
+++ b/__demo/navigation-trigger/d3/iframe.html
@@ -6,6 +6,10 @@
   </head>
   <body>
     <!-- tag::snippet[] -->
+    <ul>
+      <li data-href="/">Home</li>
+      <li data-href="/users">Users</li>
+    </ul>
     <div id="outlet"></div>
     <!-- end::snippet[] -->
   </body>
