--- a/__demo/navigation-trigger/d4/iframe.html
+++ b/__demo/navigation-trigger/d4/iframe.html
@@ -6,6 +6,8 @@
   </head>
   <body>
     <!-- tag::snippet[] -->
+    <a href="/">Home</a>
+    <a href="/friend">Meet a friend</a>
     <div id="outlet"></div>
     <!-- end::snippet[] -->
   </body>
