--- a/__demo/navigation-trigger/d4/iframe.html
+++ b/__demo/navigation-trigger/d4/iframe.html
@@ -7,7 +7,7 @@
   <body>
     <!-- tag::snippet[] -->
     <a href="/">Home</a>
-    <a href="/friend">Meet a friend</a>
+    <a href="/users">Users</a>
     <div id="outlet"></div>
     <!-- end::snippet[] -->
   </body>
