docs: improve readability

--- a/__demo/navigation-trigger/index.html
+++ b/__demo/navigation-trigger/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Animated Transitions</title>
+    <title>Navigation Trigger</title>
     <script async type="module" src="../helpers/common.ts"></script>
     <script async type="module" src="./index.ts"></script>
   </head>
   <body>
-    <vaadin-demo-layout app-title="Animated Transitions">
-      <vaadin-demo-animated-transitions></vaadin-demo-animated-transitions>
+    <vaadin-demo-layout app-title="Navigation Trigger">
+      <vaadin-demo-navigation-trigger></vaadin-demo-navigation-trigger>
     </vaadin-demo-layout>
   </body>
 </html>
