docs: improve code highlighting

--- a/__demo/getting-started/snippets.html
+++ b/__demo/getting-started/snippets.html
@@ -7,8 +7,6 @@
     <!-- tag::snippet[] -->
     <script type="module">
       import { Router } from 'https://unpkg.com/@vaadin/router';
-
-      const outlet = document.getElementById('outlet');
     </script>
     <style>
       a {
@@ -19,7 +17,7 @@
     <!-- tag::snippet[] -->
     <script src="https://unpkg.com/@vaadin/router/dist/vaadin-router.umd.min.js"></script>
     <script>
-      var Router = Vaadin.Router;
+      const Router = Vaadin.Router;
     </script>
     <!-- end::snippet[] -->
   </body>
