docs: add snippet extending & improve code content

--- a/__demo/getting-started/index.html
+++ b/__demo/getting-started/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Animated Transitions</title>
+    <title>Getting Started</title>
     <script async type="module" src="../helpers/common.ts"></script>
     <script async type="module" src="./index.ts"></script>
   </head>
