--- a/__demo/redirect/d1/iframe.html
+++ b/__demo/redirect/d1/iframe.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Code Splitting</title>
+    <title>Navigation Trigger</title>
     <script async type="module" src="script.ts"></script>
   </head>
   <body>
     <!-- tag::snippet[] -->
     <a href="/">Home</a>
-    <a href="/users/guest">User Profile</a>
+    <a href="/u/Kim">User profile</a>
+    <a href="/data/entity/view/12">Knowledge Base</a>
     <div id="outlet"></div>
     <!-- end::snippet[] -->
   </body>
