--- a/__demo/redirect/d2/iframe.html
+++ b/__demo/redirect/d2/iframe.html
@@ -1,13 +1,15 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Code Splitting</title>
+    <title>Navigation Trigger</title>
     <script async type="module" src="script.ts"></script>
   </head>
   <body>
     <!-- tag::snippet[] -->
     <a href="/">Home</a>
-    <a href="/users/guest">User Profile</a>
+    <a href="/admin">Admin</a>
+    <a href="/login">Login</a>
+    <a href="/logout">Logout</a>
     <div id="outlet"></div>
     <!-- end::snippet[] -->
   </body>
