--- a/__demo/redirect/d3/iframe.html
+++ b/__demo/redirect/d3/iframe.html
@@ -1,13 +1,12 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Code Splitting</title>
+    <title>Navigation Trigger</title>
     <script async type="module" src="script.ts"></script>
   </head>
   <body>
     <!-- tag::snippet[] -->
-    <a href="/">Home</a>
-    <a href="/users/guest">User Profile</a>
+    <button id="trigger">Open <code>/user/you-know-who</code></button>
     <div id="outlet"></div>
     <!-- end::snippet[] -->
   </body>
