--- a/__demo/route-parameters/index.html
+++ b/__demo/route-parameters/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Animated Transitions</title>
+    <title>Route Parameters</title>
     <script async type="module" src="../helpers/common.ts"></script>
     <script async type="module" src="./index.ts"></script>
   </head>
   <body>
-    <vaadin-demo-layout app-title="Animated Transitions">
-      <vaadin-demo-animated-transitions></vaadin-demo-animated-transitions>
+    <vaadin-demo-layout app-title="Route Parameters">
+      <vaadin-demo-route-parameters></vaadin-demo-route-parameters>
     </vaadin-demo-layout>
   </body>
 </html>
