docs: finalize demo pages

--- a/demo/vaadin-router-url-generation-demos.html
+++ b/demo/vaadin-router-url-generation-demos.html
@@ -93,7 +93,7 @@
     <vaadin-demo-snippet id="vaadin-router-url-generation-demo-2" iframe-src="iframe.html">
       <template preserve-content>
         <div id="outlet"></div>
-        <dom-module id="x-main-layout">
+        <dom-module id="x-main-layout-2">
           <template>
             <a href$="[[_getUrlForHome()]]">Home</a>
             <a href$="[[_getUrlForUserList()]]">Users</a>
