docs: fix several issues

--- a/__demo/url-generation/d1/iframe.html
+++ b/__demo/url-generation/d1/iframe.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <title>Navigation Trigger</title>
-    <script async type="module" src="script.ts"></script>
   </head>
   <body>
     <!-- tag::snippet[] -->
     <div id="outlet"></div>
     <!-- end::snippet[] -->
+    <script type="module" src="script.ts"></script>
   </body>
 </html>
