--- a/__demo/lifecycle-callback/d2/iframe.html
+++ b/__demo/lifecycle-callback/d2/iframe.html
@@ -7,7 +7,7 @@
   <body>
     <!-- tag::snippet[] -->
     <a href="/">Home</a>
-    <a href="/user/guest">User Profile</a>
+    <a href="/friend">Meet a friend</a>
     <div id="outlet"></div>
     <!-- end::snippet[] -->
   </body>
