docs: make build system work correctly

--- a/__demo/animated-transitions/d1/iframe.html
+++ b/__demo/animated-transitions/d1/iframe.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <title>Animated Transitions</title>
-    <link rel="stylesheet" href="styles.css" />
-    <script async type="module" src="script.ts"></script>
+    <link rel="stylesheet" href="./styles.css" />
+    <script async type="module" src="./script.ts"></script>
   </head>
   <body>
     <!-- tag::snippet[] -->
