--- a/__demo/getting-started/d1/iframe.html
+++ b/__demo/getting-started/d1/iframe.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Code Splitting</title>
+    <title>Getting Started</title>
     <script async type="module" src="script.ts"></script>
   </head>
   <body>
