--- a/__demo/url-generation/d1/iframe.html
+++ b/__demo/url-generation/d1/iframe.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Navigation Trigger</title>
+    <title>URL Generation</title>
+    <script async type="module" src="script.ts"></script>
   </head>
   <body>
     <!-- tag::snippet[] -->
     <div id="outlet"></div>
     <!-- end::snippet[] -->
-    <script type="module" src="script.ts"></script>
   </body>
 </html>
