--- a/__demo/route-actions/d2/iframe.html
+++ b/__demo/route-actions/d2/iframe.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Navigation Trigger</title>
+    <title>Route Actions</title>
     <script async type="module" src="script.ts"></script>
   </head>
   <body>
